# code-graph-nexus

./: .gitignore  .mergify.yml  CHANGELOG.md  Cargo.toml  FOLLOWUPS.md  README.md  README_zh-TW.md  index.html  install.ps1  test_route_embed.py
.github/workflows/: auto-update-pr-branches.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  ecp-pr-analyze.yml  release.yml  scorecards.yml  skill-aggregate.yml
crates/cgn-analyzer/: Cargo.toml  build.rs
crates/cgn-cli/: Cargo.toml
crates/cgn-core/: Cargo.toml
crates/ecp-analyzer/: Cargo.toml
crates/ecp-cli/: Cargo.toml  build.rs
crates/ecp-core/: Cargo.toml
crates/ecp-mcp/: Cargo.toml
crates/gnx-analyzer/: Cargo.toml
crates/gnx-cli/: Cargo.toml
crates/gnx-cli/examples/: probe_comm.rs
crates/gnx-cli/src/: engine.rs  lib.rs  main.rs  output.rs  search.rs
crates/gnx-cli/src/commands/: analyze.rs  context.rs  detect_changes.rs  format.rs  hook_handle.rs  impact.rs  mod.rs  prune.rs  query.rs  rename_branch.rs  route_map.rs  verify_resolver.rs
crates/gnx-cli/src/git/: diff_parser.rs  mod.rs  provider.rs  safe_exec.rs  shell.rs
crates/gnx-cli/tests/: blind_spots_python.rs  framework_aware_rust.rs  framework_aware_typescript.rs  framework_gates.rs  safe_exec.rs
crates/gnx-core/: Cargo.toml
crates/graph-nexus-analyzer/: Cargo.toml
crates/graph-nexus-cli/: Cargo.toml
crates/graph-nexus-core/: Cargo.toml
css/: style.css
docs/: benchmark-vs-competitors.md  competitive-landscape.md
docs/evals/: 2026-05-14-framework-aware-queries.md
docs/feat/: 2026-05-17-index-layout-followups.md
docs/parity-verification/: REVIEW_TOOL.md
docs/plans/: 2026-05-14-framework-aware-queries.md  2026-05-14-wave1-parser-dispatch.md  2026-05-15-gnx-cli-redesign.md  2026-05-16-cypher-expansion.md  2026-05-16-vector-hybrid-search.md  2026-05-21-symbol-graph-core-roadmap.md  2026-05-22-cold-ingest-opt.md  parser-worker-brief.md
docs/readme_i18n/: README_zh-TW.md  competitive-landscape_zh-TW.md
docs/skills/: gnx.md
docs/specs/: 2026-05-14-gnx-rs-parity-multi-branch-design.md  2026-05-14-gnx-summarize-design.md  2026-05-15-blind-spots.md  2026-05-15-embedding-profile-freeze.md  2026-05-15-gnx-cli-redesign-design.md  2026-05-15-host-integration.md  (+7 more)
js/: app.js
packaging/: egent-code-plexus.rb.template
scripts/: install.ps1  install.sh
tools/: gen-cli-ref.sh  lint-skill.sh
(+932 files in other folders)
