[workspace]
members = [
    "crates/gnx-core",
    "crates/gnx-analyzer",
    "crates/gnx-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["E-NoR"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/e-nor/gitnexus-rs"
homepage = "https://github.com/e-nor/gitnexus-rs"
keywords = ["git", "code-intelligence", "graph"]
categories = ["development-tools"]
