[workspace]
members = [
    "crates/gnx-core",
    "crates/gnx-analyzer",
    "crates/gnx-cli",
]
# vendor 內 grammar crates 仍透過 path dep 引用，但不視為 workspace member ──
# 避免 cargo / clippy --workspace --all-targets 編到 vendor 自身的 #[cfg(test)] 區塊
# （tree-sitter-move 的測試 mod 依賴 tree-sitter，但 vendor Cargo.toml 沒列為 dev-dep）。
exclude = [
    "crates/vendor/tree-sitter-move",
    "crates/vendor/tree-sitter-swift",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["E-NoR"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/e-nor/gitnexus-rs"
homepage = "https://github.com/e-nor/gitnexus-rs"
keywords = ["git", "code-intelligence", "graph"]
categories = ["development-tools"]

# ==================== workspace lints ====================
# 預設清單 + 對既有 pre-existing 問題的精準 allow。後續清理時逐項拔掉 allow。
[workspace.lints.clippy]
# TODO: louvain.rs:164 — 外圈 for-loop 末尾無條件 break，max_passes 失效。修需懂 Louvain 演算法意圖。
never_loop = "allow"
